--- a/food_deliver_app/src/App.css
+++ b/food_deliver_app/src/App.css
@@ -31,6 +31,7 @@ nav {
   min-height: 90px;
   width: 100%;
   background-color: #f6f6f6;
+  z-index: 1;
 }
 .navbar-menu-container {
   display: none;
@@ -66,7 +67,7 @@ nav {
 .home-banner-container {
   display: flex;
   position: relative;
-  padding-top: 3rem;
+  padding-top: 7rem;
 }
 .home-bannerImage-container {
   position: absolute;
