--- a/food_deliver_app/src/App.css
+++ b/food_deliver_app/src/App.css
@@ -35,22 +35,24 @@ nav {
   background-color: #f6f6f6;
   z-index: 1;
 
-  width: 100%;
-  background-color: #f6f6f6;
-  z-index: 1;
-
 }
 .navbar-menu-container {
   display: flexbox;
+  
+}
+.navbar-links-container{
+  margin-left: 35rem;
 }
 .navbar-links-container a {
-  
   margin-right: 3rem;
   text-decoration: none;
   color: black;
   font-size: 1.1rem;
   font-weight: 600;
+  
+  
 }
+
 .primary-button {
   padding: 0.9rem 1.75rem;
   background-color: white;
