--- a/food_deliver_app/src/App.css
+++ b/food_deliver_app/src/App.css
@@ -41,7 +41,8 @@ nav {
   
 }
 .navbar-links-container{
-  margin-left: 35rem;
+  position: relative;
+  margin-left: 30rem;
 }
 .navbar-links-container a {
   margin-right: 3rem;
